Añadir precio de BTC/Eur

--- a/index.html
+++ b/index.html
@@ -1,133 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="foto/icono.png">
     <title>KanTrades</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
-  </head>
+</head>
+
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">KanTrades</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Principal</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-          </form>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">KanTrades</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Principal</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
         </div>
-      </div>
     </nav>
 
     <!-- Banner -->
     <section class="banner bg-white">
-      <div class="container pt-5">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-lg-6 col-md-12 text-center mb-5">
-            <div class="banner-content">
-              <h1 class="fw-boolder ">KanTrades</h1>
-              <h2 class="border-bottom borde-primary border-5 pb-4">Próximamente: el lanzamiento de nuestra página. Estén atentos para más detalles. ¡Gracias por su interés!</h2>
-              <a href="mailto:info@kantrades.com" target="_black" class="btn btn-primary text-uppercese ft-3 fw-bolder">Contactar</a>
+        <div class="container pt-5">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-lg-6 col-md-12 text-center mb-5">
+                    <div class="banner-content">
+                        <h1 class="fw-boolder ">KanTrades</h1>
+                        <h2 class="border-bottom borde-primary border-5 pb-4">Próximamente: el lanzamiento de nuestra
+                            página. Estén atentos para más detalles. ¡Gracias por su interés!</h2>
+                        <a href="mailto:info@kantrades.com" target="_black"
+                            class="btn btn-primary text-uppercese ft-3 fw-bolder">Contactar</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="foto/mapa.gif" alt="Portada de la pagina" class="img-fluid mb-5">
+                </div>
             </div>
-          </div>
-          <div class="col">
-            <img src="foto/mapa.gif" alt="Portada de la pagina" class="img-fluid mb-5">
-          </div>
         </div>
-      </div>
     </section>
 
     <!-- descripcion -->
     <section class="bg-light">
-      <div class="container">
-        <div class="row mb-3">
-          <div class="offset-lg-3 col-lg-6 text-center">
-            <h2 class="border-bottom borde-primary border-4 pb-3 pt-5">Sobre nosotros</h2>
-          </div>
-        </div>
+        <div class="container">
+            <div class="row mb-3">
+                <div class="offset-lg-3 col-lg-6 text-center">
+                    <h2 class="border-bottom borde-primary border-4 pb-3 pt-5">Sobre nosotros</h2>
+                </div>
+            </div>
 
-        <div class="row align-items-center">
-          <div class="col-lg-8 offset-lg-2 col-md-8" >
-            <p>Fundada por KanBin Lou, nuestra empresa se especializa en la compra y venta de criptomonedas, con un enfoque principal en Bitcoin (BTC). Nuestro origen se encuentra en la pasión y experiencia acumulada durante casi tres años de análisis y trading en el mercado de criptomonedas.</p>
-            <p>En KanTrades, reconocemos la importancia crítica de la confianza y seguridad en el ámbito financiero digital, especialmente en el dinámico mundo de las criptomonedas. Nos dedicamos a brindar un servicio no solo transparente y confiable, sino también enriquecido con una profunda experiencia práctica y una inquebrantable dedicación hacia la satisfacción total del cliente.</p>
-            <p>Nuestro compromiso se basa en una valoración de satisfacción del cliente del 100%, una prueba fehaciente de nuestra excelencia en el servicio y nuestra constante búsqueda de la perfección. En KanTrades, su tranquilidad y éxito son nuestra máxima prioridad, asegurando así que cada transacción se realice con la máxima seguridad y eficiencia.</p>
-            <p>Nuestro objetivo es brindar una plataforma segura y fácil de usar, que permita a nuestros usuarios operar con criptomonedas de manera eficiente y con total confianza. Nos esforzamos constantemente por mantenernos al día con las últimas tendencias y tecnologías del mercado para asegurar que nuestros clientes tengan acceso a las mejores oportunidades de inversión.</p>
-            <p>En KanTrades, su seguridad y éxito son nuestra prioridad. Únase a nosotros en este emocionante viaje hacia el futuro de las finanzas digitales.</p>
-          </div>
+            <div class="row align-items-center">
+                <div class="col-lg-8 offset-lg-2 col-md-8">
+                    <p>Fundada por KanBin Lou, nuestra empresa se especializa en la compra y venta de criptomonedas, con
+                        un enfoque principal en Bitcoin (BTC). Nuestro origen se encuentra en la pasión y experiencia
+                        acumulada durante casi tres años de análisis y trading en el mercado de criptomonedas.</p>
+                    <p>En KanTrades, reconocemos la importancia crítica de la confianza y seguridad en el ámbito
+                        financiero digital, especialmente en el dinámico mundo de las criptomonedas. Nos dedicamos a
+                        brindar un servicio no solo transparente y confiable, sino también enriquecido con una profunda
+                        experiencia práctica y una inquebrantable dedicación hacia la satisfacción total del cliente.
+                    </p>
+                    <p>Nuestro compromiso se basa en una valoración de satisfacción del cliente del 100%, una prueba
+                        fehaciente de nuestra excelencia en el servicio y nuestra constante búsqueda de la perfección.
+                        En KanTrades, su tranquilidad y éxito son nuestra máxima prioridad, asegurando así que cada
+                        transacción se realice con la máxima seguridad y eficiencia.</p>
+                    <p>Nuestro objetivo es brindar una plataforma segura y fácil de usar, que permita a nuestros
+                        usuarios operar con criptomonedas de manera eficiente y con total confianza. Nos esforzamos
+                        constantemente por mantenernos al día con las últimas tendencias y tecnologías del mercado para
+                        asegurar que nuestros clientes tengan acceso a las mejores oportunidades de inversión.</p>
+                    <p>En KanTrades, su seguridad y éxito son nuestra prioridad. Únase a nosotros en este emocionante
+                        viaje hacia el futuro de las finanzas digitales.</p>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
 
     <section class="bg-white">
-      <div class="container">
-        <div class="row mb-3">
-          <div class="offset-lg-3 col-lg-6 text-center">
-            <h2 class="border-bottom borde-primary border-5 pb-4 pt-5">Preguntas Frecuentes</h2>
-          </div>
-        </div>
-
-        <div class="row align-items-center">
-          <div class="offset-lg-2 col-lg-8">
-
-            <div class="accordion" id="accordionExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    ¿Dónde pueden encontrarnos?
-                  </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>Actualmente, KanTrades opera a través de diversas plataformas confiables de intercambio de criptomonedas. Pueden realizar transacciones con nosotros en LocalCoinSwap, Paxful, Hodl Hodl y AgoraDesk. Cabe destacar que anteriormente también estábamos presentes en LocalBitcoins, pero actualmente esta plataforma está cerrada.</strong>
-                  </div>
+        <div class="container">
+            <div class="row mb-3">
+                <div class="offset-lg-3 col-lg-6 text-center">
+                    <h2 class="border-bottom borde-primary border-5 pb-4 pt-5">Preguntas Frecuentes</h2>
                 </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    ¿Qué se requiere para comprar criptomonedas?
-                  </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>Para garantizar la seguridad y cumplir con las regulaciones, solicitamos un proceso de verificación de identidad (KYC) solo en su primera operación con nosotros. Una vez completado este paso, comprar criptomonedas es tan fácil y seguro como cualquier otra compra en línea.</strong>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    ¿Cuál es el precio de las criptomonedas?
-                  </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>Los precios de las criptomonedas fluctúan según el mercado actual, lo que incluye tanto las subidas como las bajadas. En KanTrades, nos esforzamos por ofrecerles el mejor precio posible, manteniendo una estrecha vigilancia sobre el mercado para garantizar que nuestras tarifas sean competitivas y justas.</strong>
-                  </div>
-                </div>
-              </div>
             </div>
-          </div>
-        </div>
-      </div>
+
+            <div class="row align-items-center">
+                <div class="offset-lg-2 col-lg-8">
+
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    ¿Dónde pueden encontrarnos?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>Actualmente, KanTrades opera a través de diversas plataformas confiables de
+                                        intercambio de criptomonedas. Pueden realizar transacciones con nosotros en
+                                        LocalCoinSwap, Paxful, Hodl Hodl y AgoraDesk. Cabe destacar que anteriormente
+                                        también estábamos presentes en LocalBitcoins, pero actualmente esta plataforma
+                                        está cerrada.</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    ¿Qué se requiere para comprar criptomonedas?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>Para garantizar la seguridad y cumplir con las regulaciones, solicitamos un
+                                        proceso de verificación de identidad (KYC) solo en su primera operación con
+                                        nosotros. Una vez completado este paso, comprar criptomonedas es tan fácil y
+                                        seguro como cualquier otra compra en línea.</strong>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseThree" aria-expanded="false"
+                                        aria-controls="collapseThree">
+                                        ¿Cuál es el precio de las criptomonedas?
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <strong>Los precios de las criptomonedas fluctúan según el mercado actual, lo
+                                            que incluye tanto las subidas como las bajadas. En KanTrades, nos esforzamos
+                                            por ofrecerles el mejor precio posible, manteniendo una estrecha vigilancia
+                                            sobre el mercado para garantizar que nuestras tarifas sean competitivas y
+                                            justas. <br><br>Precio de venta: <span id="precio_btc"></span></strong>
+                                        <script>
+                                            function actualizarPrecioBTC() {
+                                                fetch('https://api.binance.com/api/v3/ticker/price?symbol=BTCEUR')
+                                                    .then(response => response.json())
+                                                    .then(data => {
+                                                        let bitcoinPrice = parseFloat(data.price).toFixed(2);
+                                                        bitcoinPrice = bitcoinPrice * 1.049
+                                                        document.getElementById('precio_btc').innerText = bitcoinPrice.toFixed(2) + ' EUR';
+                                                    })
+                                                    .catch(error => {
+                                                        console.error('Error al obtener el precio:', error);
+                                                        document.getElementById('precio_btc').innerText = 'Error al cargar el precio';
+                                                    });
+                                            }
+
+                                            // Actualizar el precio al cargar la página
+                                            actualizarPrecioBTC();
+
+                                            // Opcional: actualizar el precio cada X minutos
+                                            setInterval(actualizarPrecioBTC, 20000); // Actualiza el precio por milisegundo
+                                        </script>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
 
     <footer class="bg-light container-fluid text-center mt-5">
-      <div class="pt-2 pb-2">
-        &copy;KanTrades
-      </div>
+        <div class="pt-2 pb-2">
+            &copy;KanTrades
+        </div>
     </footer>
 
 </body>
+
 </html>
